<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/pbCoinDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/light_pastel_green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/llInterval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/ivCoin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etInterval"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/interval" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSetInterval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_8dp"
                android:backgroundTint="@color/light_pastel_green"
                android:text="@string/set_interval"
                app:cornerRadius="@dimen/dimen_10dp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/dimen_50dp"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_margin="@dimen/dimen_10dp"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCoinName"
            tools:src="@drawable/ic_heart_empty" />

        <TextView
            android:id="@+id/tvCoinName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notosans_regular"
            android:textColor="@color/light_pastel_green"
            android:textSize="@dimen/ts_20sp"
            app:layout_constraintBottom_toBottomOf="@id/ivBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivBack"
            tools:text="Bitcoin" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivCoin"
            android:layout_width="@dimen/dimen_60dp"
            android:layout_height="@dimen/dimen_60dp"
            android:layout_marginStart="@dimen/dimen_25dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivBack"
            tools:src="@drawable/bitcoin" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/ivCoin"
            app:layout_constraintStart_toEndOf="@id/ivCoin"
            app:layout_constraintTop_toTopOf="@id/ivCoin">

            <TextView
                android:id="@+id/tvCoinSymbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:fontFamily="@font/notosans_light"
                android:textSize="@dimen/ts_15sp"
                tools:text="@string/symbol" />

            <TextView
                android:id="@+id/tvCoinPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_light"
                android:textSize="@dimen/ts_15sp"
                tools:text="@string/current_price" />
        </LinearLayout>

        <com.github.aachartmodel.aainfographics.aachartcreator.AAChartView
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_400dp"
            android:layout_marginHorizontal="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            app:layout_constraintTop_toBottomOf="@id/llInterval">

        </com.github.aachartmodel.aainfographics.aachartcreator.AAChartView>

        <LinearLayout
            android:id="@+id/llHashingAlgorithm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/chart">

            <TextView
                android:id="@+id/labelHashingAlgorithm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:fontFamily="@font/notosans_semibold"
                android:text="@string/hashing_algorithm"
                android:textSize="@dimen/ts_15sp"
                app:layout_constraintStart_toStartOf="@id/chart"
                app:layout_constraintTop_toBottomOf="@id/chart" />

            <TextView
                android:id="@+id/tvHashingAlgorithm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:fontFamily="@font/notosans_light"
                android:layout_marginStart="@dimen/dimen_2dp"
                android:textSize="@dimen/ts_16sp"
                app:layout_constraintStart_toStartOf="@id/chart"
                app:layout_constraintTop_toBottomOf="@id/chart"
                tools:text="@string/hashing_algorithm" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_20dp"
            android:layout_marginBottom="@dimen/dimen_20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llHashingAlgorithm">

            <TextView
                android:id="@+id/labelDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:fontFamily="@font/notosans_semibold"
                android:text="@string/description"
                android:textSize="@dimen/ts_15sp" />

            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:fontFamily="@font/notosans_light"
                android:textSize="@dimen/ts_16sp"
                tools:text="Description" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>